--- a/Candidate-Sampling.ipynb
+++ b/Candidate-Sampling.ipynb
@@ -30,7 +30,7 @@
     "* cifar-100 dataset\n",
     "\n",
     "To download cifar-100 dataset, use this command:\n",
-    "```zsh\n",
+    "```sh\n",
     "curl -o cifar-100-binary.tar.gz https://www.cs.toronto.edu/~kriz/cifar-100-binary.tar.gz\n",
     "tar -xvf cifar-100-binary.tar.gz\n",
     "```"
@@ -438,13 +438,33 @@
     "editable": true
    },
    "source": [
+    "### 1.4. Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "![title](logs/candidate-sampling/precision.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
     "## 2. Word2Vec\n",
     "\n",
     "* minimized VGG model\n",
     "* cifar-100 dataset\n",
     "\n",
     "To download cifar-100 dataset, use this command:\n",
-    "```zsh\n",
+    "```sh\n",
     "curl -o cifar-100-binary.tar.gz https://www.cs.toronto.edu/~kriz/cifar-100-binary.tar.gz\n",
     "tar -xvf cifar-100-binary.tar.gz\n",
     "```"
