--- a/Candidate-Sampling.ipynb
+++ b/Candidate-Sampling.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "* minimized VGG model\n",
     "* cifar-100 dataset\n",
+    "* output: softmax / sampled softmax / hierarchical softmax\n",
     "\n",
     "To download cifar-100 dataset, use this command:\n",
     "```sh\n",
@@ -460,14 +461,498 @@
    "source": [
     "## 2. Word2Vec\n",
     "\n",
-    "* minimized VGG model\n",
-    "* cifar-100 dataset\n",
+    "* codes from https://www.tensorflow.org/tutorials/word2vec\n",
+    "* cost: nce (noise contrastive estimation) / negative sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Copyright 2015 The TensorFlow Authors. All Rights Reserved.\n",
+    "#\n",
+    "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "# you may not use this file except in compliance with the License.\n",
+    "# You may obtain a copy of the License at\n",
+    "#\n",
+    "#     http://www.apache.org/licenses/LICENSE-2.0\n",
+    "#\n",
+    "# Unless required by applicable law or agreed to in writing, software\n",
+    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "# See the License for the specific language governing permissions and\n",
+    "# limitations under the License.\n",
+    "# ==============================================================================\n",
+    "\"\"\"Basic word2vec example.\"\"\"\n",
     "\n",
-    "To download cifar-100 dataset, use this command:\n",
-    "```sh\n",
-    "curl -o cifar-100-binary.tar.gz https://www.cs.toronto.edu/~kriz/cifar-100-binary.tar.gz\n",
-    "tar -xvf cifar-100-binary.tar.gz\n",
-    "```"
+    "from __future__ import absolute_import\n",
+    "from __future__ import division\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "import collections\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import zipfile\n",
+    "\n",
+    "import numpy as np\n",
+    "from six.moves import urllib\n",
+    "from six.moves import xrange  # pylint: disable=redefined-builtin\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "#### 2.1. Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Step 1: Download the data.\n",
+    "url = 'http://mattmahoney.net/dc/'\n",
+    "\n",
+    "\n",
+    "def maybe_download(filename, expected_bytes):\n",
+    "    \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "    if not os.path.exists(filename):\n",
+    "        filename, _ = urllib.request.urlretrieve(url + filename, filename)\n",
+    "    statinfo = os.stat(filename)\n",
+    "    if statinfo.st_size == expected_bytes:\n",
+    "        print('Found and verified', filename)\n",
+    "    else:\n",
+    "        print(statinfo.st_size)\n",
+    "        raise Exception(\n",
+    "            'Failed to verify ' + filename + '. Can you get to it with a browser?')\n",
+    "    return filename\n",
+    "\n",
+    "filename = maybe_download('text8.zip', 31344016)\n",
+    "\n",
+    "# Read the data into a list of strings.\n",
+    "def read_data(filename):\n",
+    "    \"\"\"Extract the first file enclosed in a zip file as a list of words.\"\"\"\n",
+    "    with zipfile.ZipFile(filename) as f:\n",
+    "        data = tf.compat.as_str(f.read(f.namelist()[0])).split()\n",
+    "    return data\n",
+    "\n",
+    "vocabulary = read_data(filename)\n",
+    "print('Data size', len(vocabulary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Step 2: Build the dictionary and replace rare words with UNK token.\n",
+    "vocabulary_size = 50000\n",
+    "\n",
+    "def build_dataset(words, n_words):\n",
+    "    \"\"\"Process raw inputs into a dataset.\"\"\"\n",
+    "    count = [['UNK', -1]]\n",
+    "    count.extend(collections.Counter(words).most_common(n_words - 1))\n",
+    "    dictionary = dict()\n",
+    "    for word, _ in count:\n",
+    "        dictionary[word] = len(dictionary)\n",
+    "    data = list()\n",
+    "    unk_count = 0\n",
+    "    for word in words:\n",
+    "        if word in dictionary:\n",
+    "            index = dictionary[word]\n",
+    "        else:\n",
+    "            index = 0  # dictionary['UNK']\n",
+    "            unk_count += 1\n",
+    "        data.append(index)\n",
+    "    count[0][1] = unk_count\n",
+    "    reversed_dictionary = dict(zip(dictionary.values(), dictionary.keys()))\n",
+    "    return data, count, dictionary, reversed_dictionary\n",
+    "\n",
+    "data, count, dictionary, reverse_dictionary = build_dataset(vocabulary,\n",
+    "                                                            vocabulary_size)\n",
+    "del vocabulary  # Hint to reduce memory.\n",
+    "print('Most common words (+UNK)', count[:5])\n",
+    "print('Sample data', data[:10], [reverse_dictionary[i] for i in data[:10]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Step 3: Function to generate a training batch for the skip-gram model.\n",
+    "def generate_batch(batch_size, num_skips, skip_window):\n",
+    "    data_index = 0\n",
+    "    while True:\n",
+    "        assert batch_size % num_skips == 0\n",
+    "        assert num_skips <= 2 * skip_window\n",
+    "        batch = np.ndarray(shape=(batch_size), dtype=np.int32)\n",
+    "        labels = np.ndarray(shape=(batch_size, 1), dtype=np.int32)\n",
+    "        span = 2 * skip_window + 1  # [ skip_window target skip_window ]\n",
+    "        buffer = collections.deque(maxlen=span)\n",
+    "        for _ in range(span):\n",
+    "            buffer.append(data[data_index])\n",
+    "            data_index = (data_index + 1) % len(data)\n",
+    "        for i in range(batch_size // num_skips):\n",
+    "            target = skip_window  # target label at the center of the buffer\n",
+    "            targets_to_avoid = [skip_window]\n",
+    "            for j in range(num_skips):\n",
+    "                while target in targets_to_avoid:\n",
+    "                    target = random.randint(0, span - 1)\n",
+    "                targets_to_avoid.append(target)\n",
+    "                batch[i * num_skips + j] = buffer[skip_window]\n",
+    "                labels[i * num_skips + j, 0] = buffer[target]\n",
+    "            buffer.append(data[data_index])\n",
+    "            data_index = (data_index + 1) % len(data)\n",
+    "        # Backtrack a little bit to avoid skipping words in the end of a batch\n",
+    "        yield batch, labels\n",
+    "        data_index = (data_index + len(data) - span) % len(data)\n",
+    "    \n",
+    "batches = generate_batch(batch_size=8, num_skips=2, skip_window=1)\n",
+    "batch, labels = next(batches)\n",
+    "for i in range(8):\n",
+    "    print(batch[i], reverse_dictionary[batch[i]],\n",
+    "          '->', labels[i, 0], reverse_dictionary[labels[i, 0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Step 4: Build and train a skip-gram model.\n",
+    "batch_size = 128\n",
+    "embedding_size = 128  # Dimension of the embedding vector.\n",
+    "skip_window = 1       # How many words to consider left and right.\n",
+    "num_skips = 2         # How many times to reuse an input to generate a label.\n",
+    "\n",
+    "# We pick a random validation set to sample nearest neighbors. Here we limit the\n",
+    "# validation samples to the words that have a low numeric ID, which by\n",
+    "# construction are also the most frequent.\n",
+    "valid_size = 16     # Random set of words to evaluate similarity on.\n",
+    "valid_window = 100  # Only pick dev samples in the head of the distribution.\n",
+    "valid_examples = np.random.choice(valid_window, valid_size, replace=False)\n",
+    "num_sampled = 64    # Number of negative examples to sample.\n",
+    "\n",
+    "# Input data.\n",
+    "train_inputs = tf.placeholder(tf.int32, shape=[batch_size])\n",
+    "train_labels = tf.placeholder(tf.int32, shape=[batch_size, 1])\n",
+    "valid_dataset = tf.constant(valid_examples, dtype=tf.int32)\n",
+    "\n",
+    "# Look up embeddings for inputs.\n",
+    "embeddings = tf.Variable(\n",
+    "    tf.random_uniform([vocabulary_size, embedding_size], -1.0, 1.0))\n",
+    "embed = tf.nn.embedding_lookup(embeddings, train_inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. Training Type\n",
+    "* nce\n",
+    "* negative sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Uniformly distributed samples\n",
+    "num_true = 1\n",
+    "sampled_values = tf.nn.uniform_candidate_sampler(\n",
+    "          true_classes=tf.cast(train_labels, tf.int64),\n",
+    "          num_true=num_true,\n",
+    "          num_sampled=num_sampled,\n",
+    "          unique=True,\n",
+    "          range_max=vocabulary_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.1. NCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Construct the variables for the NCE loss\n",
+    "nce_weights = tf.Variable(\n",
+    "    tf.truncated_normal([vocabulary_size, embedding_size],\n",
+    "                        stddev=1.0 / math.sqrt(embedding_size)))\n",
+    "nce_biases = tf.Variable(tf.zeros([vocabulary_size]))\n",
+    "\n",
+    "# Compute the average NCE loss for the batch.\n",
+    "# tf.nce_loss automatically draws a new sample of the negative labels each\n",
+    "# time we evaluate the loss.\n",
+    "loss = tf.reduce_mean(\n",
+    "    tf.nn.nce_loss(weights=nce_weights,\n",
+    "                   biases=nce_biases,\n",
+    "                   labels=train_labels,\n",
+    "                   inputs=embed,\n",
+    "                   num_sampled=num_sampled,\n",
+    "                   num_classes=vocabulary_size,\n",
+    "                   sampled_values=sampled_values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2. Negative Sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.ops.nn_impl import _compute_sampled_logits, _sum_rows\n",
+    "\n",
+    "def neg_loss(weights,\n",
+    "             biases,\n",
+    "             labels,\n",
+    "             inputs,\n",
+    "             num_sampled,\n",
+    "             num_classes,\n",
+    "             num_true=1,\n",
+    "             sampled_values=None,\n",
+    "             remove_accidental_hits=False,\n",
+    "             partition_strategy=\"mod\",\n",
+    "             name=\"neg_loss\"):\n",
+    "\n",
+    "    logits, labels = _compute_sampled_logits(\n",
+    "        weights=weights,\n",
+    "        biases=biases,\n",
+    "        labels=labels,\n",
+    "        inputs=inputs,\n",
+    "        num_sampled=num_sampled,\n",
+    "        num_classes=num_classes,\n",
+    "        num_true=num_true,\n",
+    "        sampled_values=sampled_values,\n",
+    "        subtract_log_q=False,\n",
+    "        remove_accidental_hits=remove_accidental_hits,\n",
+    "        partition_strategy=partition_strategy,\n",
+    "        name=name)\n",
+    "    sampled_losses = tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        labels=labels, logits=logits, name=\"sampled_losses\")\n",
+    "    # sampled_losses is batch_size x {true_loss, sampled_losses...}\n",
+    "    # We sum out true and sampled losses.\n",
+    "    return _sum_rows(sampled_losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Construct the variables for the NCE loss\n",
+    "neg_weights = tf.Variable(\n",
+    "    tf.truncated_normal([vocabulary_size, embedding_size],\n",
+    "                        stddev=1.0 / math.sqrt(embedding_size)))\n",
+    "neg_biases = tf.Variable(tf.zeros([vocabulary_size]))\n",
+    "\n",
+    "# Compute the average NCE loss for the batch.\n",
+    "# tf.nce_loss automatically draws a new sample of the negative labels each\n",
+    "# time we evaluate the loss.\n",
+    "loss = tf.reduce_mean(\n",
+    "    neg_loss(weights=neg_weights,\n",
+    "                   biases=neg_biases,\n",
+    "                   labels=train_labels,\n",
+    "                   inputs=embed,\n",
+    "                   num_sampled=num_sampled,\n",
+    "                   num_classes=vocabulary_size,\n",
+    "                   sampled_values=sampled_values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Construct the SGD optimizer using a learning rate of 1.0.\n",
+    "optimizer = tf.train.GradientDescentOptimizer(1.0).minimize(loss)\n",
+    "\n",
+    "# Compute the cosine similarity between minibatch examples and all embeddings.\n",
+    "norm = tf.sqrt(tf.reduce_sum(tf.square(embeddings), 1, keep_dims=True))\n",
+    "normalized_embeddings = embeddings / norm\n",
+    "valid_embeddings = tf.nn.embedding_lookup(\n",
+    "    normalized_embeddings, valid_dataset)\n",
+    "similarity = tf.matmul(\n",
+    "    valid_embeddings, normalized_embeddings, transpose_b=True)\n",
+    "\n",
+    "# Add variable initializer.\n",
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Step 5: Begin training.\n",
+    "num_steps = 100001\n",
+    "batches = generate_batch(batch_size, num_skips, skip_window)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "  # We must initialize all variables before we use them.\n",
+    "    init.run()\n",
+    "    print('Initialized')\n",
+    "\n",
+    "    average_loss = 0\n",
+    "    for step in xrange(num_steps):\n",
+    "        batch_inputs, batch_labels = next(batches)\n",
+    "        feed_dict = {train_inputs: batch_inputs, train_labels: batch_labels}\n",
+    "\n",
+    "        # We perform one update step by evaluating the optimizer op (including it\n",
+    "        # in the list of returned values for session.run()\n",
+    "        _, loss_val = sess.run([optimizer, loss], feed_dict=feed_dict)\n",
+    "        average_loss += loss_val\n",
+    "\n",
+    "        if step % 2000 == 0:\n",
+    "            if step > 0:\n",
+    "                average_loss /= 2000\n",
+    "            # The average loss is an estimate of the loss over the last 2000 batches.\n",
+    "            print('Average loss at step ', step, ': ', average_loss)\n",
+    "            average_loss = 0\n",
+    "\n",
+    "        # Note that this is expensive (~20% slowdown if computed every 500 steps)\n",
+    "        if step % 10000 == 0:\n",
+    "            sim = similarity.eval()\n",
+    "            for i in xrange(valid_size):\n",
+    "                valid_word = reverse_dictionary[valid_examples[i]]\n",
+    "                top_k = 8  # number of nearest neighbors\n",
+    "                nearest = (-sim[i, :]).argsort()[1:top_k + 1]\n",
+    "                log_str = 'Nearest to %s:' % valid_word\n",
+    "                for k in xrange(top_k):\n",
+    "                    close_word = reverse_dictionary[nearest[k]]\n",
+    "                    log_str = '%s %s,' % (log_str, close_word)\n",
+    "                print(log_str)\n",
+    "    final_embeddings = normalized_embeddings.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4. Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Step 6: Visualize the embeddings.\n",
+    "def plot_with_labels(low_dim_embs, labels, filename='tsne_neg.png'):\n",
+    "    assert low_dim_embs.shape[0] >= len(labels), 'More labels than embeddings'\n",
+    "    plt.figure(figsize=(18, 18))  # in inches\n",
+    "    for i, label in enumerate(labels):\n",
+    "        x, y = low_dim_embs[i, :]\n",
+    "        plt.scatter(x, y)\n",
+    "        plt.annotate(label,\n",
+    "                     xy=(x, y),\n",
+    "                     xytext=(5, 2),\n",
+    "                     textcoords='offset points',\n",
+    "                     ha='right',\n",
+    "                     va='bottom')\n",
+    "\n",
+    "    plt.savefig(filename)\n",
+    "\n",
+    "try:\n",
+    "    # pylint: disable=g-import-not-at-top\n",
+    "    from sklearn.manifold import TSNE\n",
+    "    %matplotlib inline\n",
+    "    import matplotlib.pyplot as plt\n",
+    "\n",
+    "    tsne = TSNE(perplexity=30, n_components=2, init='pca', n_iter=5000)\n",
+    "    plot_only = 500\n",
+    "    low_dim_embs = tsne.fit_transform(final_embeddings[:plot_only, :])\n",
+    "    labels = [reverse_dictionary[i] for i in xrange(plot_only)]\n",
+    "    plot_with_labels(low_dim_embs, labels)\n",
+    "\n",
+    "except ImportError:\n",
+    "    print('Please install sklearn, matplotlib, and scipy to show embeddings.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4.1. NCE\n",
+    "![title](logs/candidate-sampling/tsne_nce.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4.2, Negative Sampling\n",
+    "![title](logs/candidate-sampling/tsne_neg.png)"
    ]
   }
  ],
