--- a/Candidate-Sampling.ipynb
+++ b/Candidate-Sampling.ipynb
@@ -908,7 +908,7 @@
    "outputs": [],
    "source": [
     "# Step 6: Visualize the embeddings.\n",
-    "def plot_with_labels(low_dim_embs, labels, filename='tsne_neg.png'):\n",
+    "def plot_with_labels(low_dim_embs, labels, filename='tsne.png'):\n",
     "    assert low_dim_embs.shape[0] >= len(labels), 'More labels than embeddings'\n",
     "    plt.figure(figsize=(18, 18))  # in inches\n",
     "    for i, label in enumerate(labels):\n",
