modify learning rate

--- a/Fast-Text.ipynb
+++ b/Fast-Text.ipynb
@@ -329,7 +329,7 @@
     "    elif epoch < 2000:\n",
     "        lrn_rate = .01\n",
     "    elif epoch < 2500:\n",
-    "        lrn_ratee = .003\n",
+    "        lrn_rate = .003\n",
     "    else:\n",
     "        lrn_rate = .001\n",
     "        \n",
