--- a/Fast-Text.ipynb
+++ b/Fast-Text.ipynb
@@ -32,7 +32,13 @@
     "editable": true
    },
    "source": [
-    "## Data Preprocessing"
+    "## Data Preprocessing\n",
+    "\n",
+    "To download stanford large movie review dataset, use this command:\n",
+    "```sh\n",
+    "wget http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+    "tar -xvf aclImdb_v1.tar.gz\n",
+    "```"
    ]
   },
   {
