--- a/Normalizing-Flow.ipynb
+++ b/Normalizing-Flow.ipynb
@@ -187,7 +187,7 @@
     "0. Variational distribution q(z|x) as a bivariate gaussian which is independent across axes.\n",
     "0. Variational distribution q(z|x) as a bivariate IAF.\n",
     "\n",
-    "For simplification, we constrain that x follows one of four gaussians."
+    "For simplification, we constrain that x follows mixture of four simple distribution as below."
    ]
   },
   {
